tests/typing/fail/noinit.act
contract B

contract A

constructor
interface constructor()

creates
   uint x := 0
   B b := create B()

constructor
interface constructor()

creates
   uint y := 0
   A a := create A()

transition remote
interface set_remote(uint z)

updates
   a.x := z

transition multi
interface set_remote2(uint z)

updates
   y := 1
   a.x := z
